	update: ability to extend supported device breed list via plug-in
	update: add a server configuration report (same as before install/upgrade)
	update: new modular port type 'SFP28'
	update: allow to delete local user accounts (Mantis#1089)
	update: show names in allocated units when assigning rackspace (Mantis#1711)
	new feature: "shared router" allocation (GH#210 by Vladimir Ivanov)
	new feature: optional tag descriptions
	new feature: support for HP N.11.78 and IOS 15 (GH #225 by Vasilii Shashkov)
	bugfix: fixup an SQL query in the integrity report
	bugfix: make the "Uncheck all" button rack-specific
0.21.1 2017-10-22
	update: improve Percona server support (Mantis#1793)
	bugfix: fix an upgrade bug introduced in 0.21.0 (found by Chris James)
0.21.0 2017-10-01
	update: better display objects that have no common name
	update: highlight RackCode syntax in the Permissions viewer too
	update: refine delivery of rack thumb images
	update: new plugin architecture
	update: add support for IP-over-InfiniBand L2 addresses
	update: improve MariaDB support
	update: rename VLANIPV4NET_LISTSRC to VLANNET_LISTSRC
	bugfix: put dictionary-based attributes formatting right
	bugfix: date attributes now can be set for racks, rows and locations
	bugfix: add support for PHP 7.1 (Mantis #1771)
	bugfix: fix logging out (Mantis #496 and duplicates)
	new feature: tag colors (GH#158 by Maik Ehinger)
0.20.14 2017-08-10
	update: cover comments too in IPv4 & IPv6 search (Mantis#1773 by Fred Stuck)
	update: suppress the rackspace portlet column if it is empty
	update: refine items in the dictionary (e.g. SuperMicro and EMC)
	update: adjust some code for easier customization
	update: improve some error messages
0.20.13 2017-05-12
	update: fix performance for pages with images (GH#190 by Michael A. Mikhailov)
	update: improve SNMP support for Brocade devices (GH#180 by Chris Jones)
	update: imply %u for port labels too (Mantis#1739 by Gianluca Laudano)