@@ -707,14 +707,11 @@ $tab['reports']['8021q'] = '802.1Q';
 $tab['reports']['warranty'] = 'Expirations';
 $tab['reports']['integrity'] = 'Data Integrity';
 $tab['reports']['serverconf'] = 'Server configuration';
-$tab['reports']['local'] = 'local'; // this one is set later in init.php
-$trigger['reports']['local'] = 'trigger_localreports';
 $tabhandler['reports']['default'] = 'renderSystemReports';
 $tabhandler['reports']['8021q'] = 'render8021QReport';
 $tabhandler['reports']['warranty'] = 'renderExpirations';
 $tabhandler['reports']['integrity'] = 'renderDataIntegrityReport';
 $tabhandler['reports']['serverconf'] = 'renderServerConfigurationReport';
-$tabhandler['reports']['local'] = 'renderLocalReports';
 $interface_requires['reports-default'] = 'code.php';
 $interface_requires['reports-serverconf'] = 'dictionary.php';
 $interface_requires['reports-*'] = 'interface-reports.php';
